[metadata]
name = <ADD PACKAGE NAME HERE>
version = 0.0.1
description = <ADD DESCRIPTION HERE>
long_description = file: README.rst
long_description_content_type = text/x-rst
author = <ADD YOUR NAME HERE> 
author_email = <ADD YOUR EMAIL ADDRESS HERE>
license = MIT
url = <ADD YOUR PROJECT HOMEPAGE HERE>
classifiers = 
    # See https://pypi.org/classifiers/ for a complete list of classifiers

[options]
packages = find:
package_dir =
    = src
python_requires = <ADD PYTHON VERSION REQUIREMENTS HERE>
# See requirements.txt for install_requires

[options.packages.find]
where = src

[options.extras_require]
dev =
    flake8>=4.0,<4.1
    black>=22.3,<23.0
dist =
    build>=0.8,<0.9
    twine>=4.0,<4.1
    setuptools>=42
